tests/fixtures/invalid/w009/orphan_library.spec
spec "test" {
  version "1.0"
  plugins ["@specforge/product"]
}

library lonely_lib "@test/lonely" {
  family core
}
